--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,11 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
 
+    //aspect
     implementation 'org.aspectj:aspectjrt:1.8.13'
 
+    //ViewModel
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0-alpha03'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel:2.2.0-alpha03'
+    annotationProcessor  'androidx.lifecycle:lifecycle-compiler:2.2.0-alpha03'
 }
