--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,4 +41,9 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0-alpha03'
     implementation 'androidx.lifecycle:lifecycle-viewmodel:2.2.0-alpha03'
     annotationProcessor  'androidx.lifecycle:lifecycle-compiler:2.2.0-alpha03'
+
+    // room
+    implementation 'androidx.room:room-runtime:2.2.0-beta01'
+    implementation 'androidx.room:room-rxjava2:2.2.0-beta01'
+    annotationProcessor 'androidx.room:room-compiler:2.2.0-beta01'
 }
