--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,12 +11,22 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        javaCompileOptions {
+            annotationProcessorOptions {
+                arguments = ["room.schemaLocation": "$projectDir/schemas".toString()]
+            }
+        }
     }
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
+    }
+
+    sourceSets {
+        androidTest.assets.srcDirs += files("$projectDir/schemas".toString())
     }
 
     dataBinding {
@@ -46,4 +56,8 @@ dependencies {
     implementation 'androidx.room:room-runtime:2.2.0-beta01'
     implementation 'androidx.room:room-rxjava2:2.2.0-beta01'
     annotationProcessor 'androidx.room:room-compiler:2.2.0-beta01'
+
+    // RxJava
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.9'
 }
